# mygit

./: .gitignore  .myignore  CMakeLists.txt  README.md
include/: cmd_errors.h  command.h  commands.h  config.h  error.h  hash.h  io.h  list.h  myignore.h  object.h  object_types.h  parser.h  repository.h  staging.h  stream.h  tree.h  tree_diff.h  tree_walk.h  util.h  utils.h
src/: cmd_errors.c  command.c  error.c  hash.c  io.c  list.c  main.c  myignore.c  object.c  parser.c  repository.c  staging.c  stream.c  tree.c  tree_diff.c  tree_walk.c  util.c  utils.c
